--- a/package.json
+++ b/package.json
@@ -2,5 +2,11 @@
   "author": "Dan Nielsen <dnielsen@reachmail.com>",
   "name": "pmta",
   "version": "0.9.1",
-  "main": "index.js"
+  "main": "index.js",
+  "dependencies": {
+    "nan": "^2.2.0"
+  },
+  "scripts" : {
+    "prebuild": "npm install nan"
+  }
 }
