--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "author": "Dan Nielsen <dnielsen@reachmail.com>",
   "name": "pmta",
-  "version": "0.9.2",
+  "license": "GPL-3.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/danielsen/node-pmta"
+  },
+  "version": "0.9.3",
   "main": "index.js",
   "dependencies": {
     "nan": "^2.2.0"
